2012-07-03	Alexey S. Denisov

	* core/Cache/Cache.class.php
		core/DB/DB.class.php
		global.inc.php.tpl
		main/DAOs/BaseDAO.class.php
		main/DAOs/GenericDAO.class.php
		main/DAOs/Uncachers/UncacherBase.class.php
		main/DAOs/Uncachers/UncacherBaseDaoWorker.class.php
		main/DAOs/Uncachers/UncacherCacheDaoWorkerLists.class.php
		main/DAOs/Uncachers/UncacherCommonDaoWorker.class.php
		main/DAOs/Uncachers/UncacherGenericDAO.class.php
		main/DAOs/Uncachers/UncacherNullDaoWorker.class.php
		main/DAOs/Uncachers/UncacherSmartDaoWorkerLists.class.php
		main/DAOs/Uncachers/UncacherTaggableDaoWorker.class.php
		main/DAOs/Uncachers/UncacherVoodoDaoWorkerLists.class.php
		main/DAOs/Uncachers/UncachersPool.class.php
		main/DAOs/Workers/BaseDaoWorker.class.php
		main/DAOs/Workers/CacheDaoWorker.class.php
		main/DAOs/Workers/CommonDaoWorker.class.php
		main/DAOs/Workers/DalayedDropDaoWorker.class.php
		main/DAOs/Workers/NullDaoWorker.class.php
		main/DAOs/Workers/SmartDaoWorker.class.php
		main/DAOs/Workers/VoodooDaoWorker.class.php:

	Introducing Uncachers

2012-06-29	N. Konstantinov

	* core/DB/PgSQL.class.php
		test/core/DbConnectionTest.class.php:

	throw DatabaseException instead of BaseException in case of connection's failure

2012-06-27	Alexey S. Denisov

	* main/Base/AbstractProtoClass.class.php
		main/Base/InnerMetaProperty.class.php
		main/Base/LightMetaProperty.class.php
		main/DAOs/StorableDAO.class.php
		test/core/AbstractProtoClassFillQueryTest.class.php:

	moved and updated StorableDAO::unite "properties compare logic" to AbstractProtoClass
		and (Inner|Light)MetaProperty and covered with tests
		
2012-06-04	Evgeny M. Stepanov

	* main/Base/Hstore.class.php: fix

2012-05-31	Alexey S. Denisov

	* main/DAOs/StorableDAO.class.php: fix merge object with self
		
2012-05-28	Georgiy T. Kutsurua

	* core/Cache/PeclMemcache.class.php
		core/Cache/PeclMemcached.class.php
		core/Cache/{Memcached.class.php → SocketMemcached.class.php}
		